--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Pasanga Diaries</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pasanga Diaries</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff8ee;
+      color: #333;
+      text-align: center;
+      padding: 20px;
+    }
+    img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      color: #c0392b;
+    }
+    a {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    a:hover {
+      background-color: #2980b9;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Pasanga Diaries</h1>
-    <p>Subscribe to our YouTube Channel!</p>
-    <a href="https://youtube.com/@pasangadiaries">Visit Channel</a>
+  <img src="https://raw.githubusercontent.com/mohanmoki13/pasanga-diaries/main/logo.jpg" alt="Pasanga Diaries Logo">
+  <h1>Welcome to Pasanga Diaries</h1>
+  <p>We vlog about food, travel, and fun!</p>
+  <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
+  <p>Contact us: pasangadiaries@gmail.com</p>
 </body>
 </html>
