--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/mohanmoki13/pasanga-diaries/main/logo.jpg" alt="Pasanga Diaries Logo">
+  <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
   <h1>Welcome to Pasanga Diaries</h1>
   <p>We vlog about food, travel, and fun!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
