--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       margin-top: 15px;
       padding: 10px 20px;
       background-color: #3498db;
-      color: white;
+      color: blue;
       text-decoration: none;
       border-radius: 8px;
     }
