--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff8ee;
+      background-color: #e0f7fa;
       color: #333;
       text-align: center;
       padding: 20px;
