--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <h1>Welcome to Pasanga Diaries</h1>
   <p>We vlog about food, travel, and fun!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
+  <br><br>
+  <a
+    href="https://https://www.facebook.com/share/r/168TjkHbfW/" target="_blank">Visit Our YouTube Channel</a> 
   <p>Contact us: pasangadiaries@gmail.com</p>
 </body>
 </html>
