--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
   <p>We vlog about food, travel, and fun!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
   <br><br>
-  <a
-    href="https://https://www.facebook.com/share/r/168TjkHbfW/" target="_blank">Visit Our YouTube Channel</a> 
+<a href="https://www.facebook.com/https://www.facebook.com/share/1ChFrzeBzM/" target="_blank" style="background-color: #3b5998;">Follow us on Facebook</a>
   <p>Contact us: pasangadiaries@gmail.com</p>
 </body>
 </html>
