--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <p>We vlog about food, travel, and fun!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
   <br><br>
-<a href="https://www.facebook.com/https://www.facebook.com/654233104438913" target="_blank" style="background-color: #3b5998;">Follow us on Facebook</a>
+<a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #3b5998;">Follow us on Facebook</a>
   <p>Contact us: pasangadiaries@gmail.com</p>
 </body>
 </html>
