--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       display: inline-block;
       margin-top: 15px;
       padding: 10px 20px;
-      background-color: #3498db;
+      background-color: #fdc0cf;
       color: blue;
       text-decoration: none;
       border-radius: 8px;
     }
     a:hover {
-      background-color: #2980b9;
+      background-color:#fdd6f2;
     }
   </style>
 </head>
@@ -37,9 +37,9 @@
   <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
   <h1>Welcome to Pasanga Diaries</h1>
   <p>We vlog about food, travel, and fun!</p>
-  <a href="https://youtube.com/@pasangadiaries" target="_blank">Visit Our YouTube Channel</a>
+  <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7;">Visit Our YouTube Channel</a>
   <br><br>
-<a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #d9f2f6;">Follow us on Facebook</a>
+<a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #82e7f7;">Follow us on Facebook</a>
   <p>Contact us: pasangadiaries@gmail.com</p>
 </body>
 </html>
