--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
   <h1>Welcome to Pasanga Diaries</h1>
   <p>We vlog about food, travel, and fun!</p>
-  <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7;">Visit Our YouTube Channel</a>
+  <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7; color: #990f0f">Visit Our YouTube Channel</a>
   <br><br>
 <a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #82e7f7;">Follow us on Facebook</a>
   <p>Contact us: pasangadiaries@gmail.com</p>
