--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       display: inline-block;
       margin-top: 15px;
       padding: 10px 20px;
-      background-color: #fdc0cf;
+      background-color: #f683ab;
       color: blue;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
     }
     a:hover {
       background-color:#fdd6f2;
