--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       max-width: 200px;
       margin-bottom: 20px;
     }
-    h1 {
+    h1 { 
       color: #c0392b;
     }
     a {
@@ -35,7 +35,9 @@
 </head>
 <body>
   <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
-  <h1>Welcome to Pasanga Diaries</h1>
+  <h1><p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
+  Pasanga Diaries is all about fun, food, and everyday adventures! Join us as we explore street food, local events, spiritual experiences, and real-life stories that inspire. Subscribe and be part of our journey!
+</p>
   <p>We vlog about food, travel, and fun!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7; color:#580d0d">Visit Our YouTube Channel</a>
   <br><br>
