--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
-  <h1><p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
+  <h1> WELCOME TO PASANGA DIARIES <p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
   Pasanga Diaries is all about fun, food, and everyday adventures! Join us as we explore street food, local events, spiritual experiences, and real-life stories that inspire. Subscribe and be part of our journey!
 </p>
   <p>We vlog about food, travel, and fun!</p>
