--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 </head>
 <body>
   <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
-  <h1> WELCOME TO PASANGA DIARIES <p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
+  <h1><p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
   Pasanga Diaries is all about fun, food, and everyday adventures! Join us as we explore street food, local events, spiritual experiences, and real-life stories that inspire. Subscribe and be part of our journey!
 </p>
-  <p>We vlog about food, travel, and fun!</p>
+  <p>WELCOME TO PASANGA DIARIES!</p>
   <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7; color:#580d0d">Visit Our YouTube Channel</a>
   <br><br>
 <a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #82e7f7; color:#580d0d">Follow us on Facebook</a>
