--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       border-radius: 10px;
     }
     a:hover {
-      background-color:#fdd6f2;
+      background-color:#f683ab;
     }
   </style>
 </head>
