--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #9df4a8;
+      background-color: #f683ab;
       color: #333;
       text-align: center;
       padding: 20px;
