--- a/index.html
+++ b/index.html
@@ -6,42 +6,39 @@
   <title>Pasanga Diaries</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f683ab;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ffe4c4, #fefbd8);
       color: #333;
       text-align: center;
-      padding: 20px;
+      padding: 0;
     }
-    img {
-      max-width: 200px;
-      margin-bottom: 20px;
+    header {
+      background-color: #2c3e50;
+      padding: 20px 0;
+      color: white;
     }
-    h1 { 
-      color: #c0392b;
+    header h1 {
+      margin: 0;
+      font-size: 32px;
     }
-    a {
+    .logo {
+      width: 120px;
+      border-radius: 50%;
+      margin-top: 10px;
+    }
+    .content {
+      padding: 30px 20px;
+    }
+    .description {
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    .buttons a {
       display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background-color: #f683ab;
-      color: blue;
-      text-decoration: none;
-      border-radius: 10px;
-    }
-    a:hover {
-      background-color:#f683ab;
-    }
-  </style>
-</head>
-<body>
-  <img src="logo.jpg.jpeg" alt="Pasanga Diaries Logo">
-   <p><p style="max-width: 600px; margin: auto; font-size: 20px; line-height: 1.8; color: #4813d4;">WELCOME TO PASANGA DIARIES!</p>
-  <h1><p style="max-width: 600px; margin: auto; font-size: 18px; line-height: 1.6;">
-  Pasanga Diaries is all about fun, food, and everyday adventures! Join us as we explore street food, local events, spiritual experiences, and real-life stories that inspire. Subscribe and be part of our journey!
-</p>
-  <a href="https://youtube.com/@pasangadiaries" target="_blank"style="background-color: #82e7f7; color:#580d0d">Visit Our YouTube Channel</a>
-  <br><br>
-<a href="https://www.facebook.com/share/19Vw6Qzfwi/" target="_blank" style="background-color: #82e7f7; color:#580d0d">Follow us on Facebook</a>
-  <p>Contact us: pasangadiaries@gmail.com</p>
-</body>
-</html>
+      margin: 10px;
+      padding: 12px 25px;
+      border-radius: 8px;
+      text-decoration: none
