--- a/index.html
+++ b/index.html
@@ -41,4 +41,44 @@
       margin: 10px;
       padding: 12px 25px;
       border-radius: 8px;
-      text-decoration: none
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .youtube { background: #ff0000; }
+    .youtube:hover { background: #cc0000; }
+    .facebook { background: #3b5998; }
+    .facebook:hover { background: #2d4373; }
+    footer {
+      background: #2c3e50;
+      color: white;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="logo.jpg" alt="Pasanga Diaries Logo" class="logo">
+    <h1>Pasanga Diaries</h1>
+  </header>
+
+  <div class="content">
+    <p class="description">
+      Welcome to Pasanga Diaries — your source for fun, laughter, festivals, food, and real stories! We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+    </p>
+
+    <div class="buttons">
+      <a href="https://youtube.com/@pasangadiaries" class="youtube" target="_blank">Subscribe on YouTube</a>
+      <a href="https://www.facebook.com/yourusername" class="facebook" target="_blank">Follow on Facebook</a>
+    </div>
+  </div>
+
+  <footer>
+    Contact us: pasangadiaries@gmail.com
+  </footer>
+
+</body>
+</html>
