--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
   <div class="content">
     <p class="description">
-      Welcome to Pasanga Diaries — your source for fun, laughter, festivals, food, and real stories! We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+      Welcome to Pasanga Diaries — Our source for fun, laughter, festivals, food, and real stories! We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
     </p>
 
     <div class="buttons">
       <a href="https://youtube.com/@pasangadiaries" class="youtube" target="_blank">Subscribe on YouTube</a>
-      <a href="https://www.facebook.com/yourusername" class="facebook" target="_blank">Follow on Facebook</a>
+      <a href="https://www.facebook.com/https://www.facebook.com/share/1ChFrzeBzM/" class="facebook" target="_blank">Follow on Facebook</a>
     </div>
   </div>
 
