--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="buttons">
       <a href="https://youtube.com/@pasangadiaries" class="youtube" target="_blank">Subscribe on YouTube</a>
-      <a href="https://www.facebook.com/https://www.facebook.com/share/1ChFrzeBzM/" class="facebook" target="_blank">Follow on Facebook</a>
+      <a href="https:www.facebook.com/share/1ChFrzeBzM/" class="facebook" target="_blank">Follow on Facebook</a>
     </div>
   </div>
 
