--- a/index.html
+++ b/index.html
@@ -1,103 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pasanga Diaries</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0f2027; /* dark gradient */
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
       color: #fff;
-      text-align: center;
       overflow-x: hidden;
     }
-    header {
-      padding: 30px 20px 10px;
+    .container {
+      position: relative;
+      text-align: center;
+      padding: 80px 20px 40px;
+      z-index: 2;
     }
-    .logo {
-      width: 100px;
-      border-radius: 50%;
-      box-shadow: 0 0 15px #00e6e6;
-    }
-    h1 {
-      font-size: 36px;
-      margin-top: 15px;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00e6e6;
+    .title {
+      font-size: 2.5em;
+      margin-bottom: 20px;
     }
     .description {
-      max-width: 800px;
-      margin: 30px auto;
-      font-size: 18px;
-      line-height: 1.8;
-      padding: 0 20px;
-      color: #e0f7fa;
+      max-width: 600px;
+      margin: 0 auto 30px;
+      font-size: 1.1em;
+      line-height: 1.6;
     }
     .buttons a {
       display: inline-block;
       margin: 10px;
-      padding: 12px 24px;
-      border-radius: 30px;
-      text-decoration: none;
+      padding: 12px 20px;
       color: white;
+      border-radius: 8px;
+      text-decoration: none;
       font-weight: bold;
-      background: linear-gradient(to right, #ff416c, #ff4b2b);
-      box-shadow: 0 0 12px #ff416c;
-      transition: 0.3s ease-in-out;
+      transition: background 0.3s;
+    }
+    .buttons a.youtube {
+      background-color: #ff0000;
+    }
+    .buttons a.facebook {
+      background-color: #3b5998;
     }
     .buttons a:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 20px #ff4b2b;
+      opacity: 0.85;
     }
-
-    footer {
+    .footer {
+      background-color: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
       position: relative;
-      background: #111;
-      color: #aaa;
-      padding: 40px 20px 60px;
-      margin-top: 50px;
+      z-index: 2;
     }
-
-    .wave {
+    .animated-character {
       position: absolute;
       bottom: 0;
-      left: 0;
-      height: 80px;
-      width: 100%;
-      background: url('https://svgshare.com/i/xsV.svg') repeat-x;
-      background-size: cover;
-      animation: waveAnim 8s linear infinite;
+      width: 150px;
+      z-index: 1;
     }
-
-    @keyframes waveAnim {
-      0% { background-position-x: 0; }
-      100% { background-position-x: 1600px; }
+    .left-character {
+      left: 10px;
+    }
+    .right-character {
+      right: 10px;
+    }
+    @media (max-width: 600px) {
+      .animated-character {
+        width: 100px;
+      }
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <img src="logo.jpg" alt="Pasanga Diaries Logo" class="logo">
-    <h1>Pasanga Diaries</h1>
-  </header>
-
-  <div class="description">
-    Welcome to Pasanga Diaries — a vibrant space for fun, real-life stories, spiritual moments, street food, and celebration vlogs from Tamil Nadu. Join us for exciting and entertaining videos, and become part of our digital gang!
-  </div>
-
-  <div class="buttons">
-    <a href="https://youtube.com/@pasangadiaries" target="_blank">Subscribe on YouTube</a>
-    <a href="https://facebook.com/yourusername" target="_blank">Follow on Facebook</a>
-  </div>
-
-  <footer>
+  <img src="https://media.giphy.com/media/l41lFw057lAJQMwg0/giphy.gif" class="animated-character left-character" alt="funny boy" />
+  <img src="https://media.giphy.com/media/xT0BKiaM2VGJpV2MLG/giphy.gif" class="animated-character right-character" alt="dancing boy" />  <div class="container">
+    <img src="https://i.imgur.com/FdZLkPl.png" alt="Pasanga Diaries Logo" width="100" />
+    <div class="title">Pasanga Diaries</div>
+    <div class="description">
+      Welcome to Pasanga Diaries — Our source for fun, laughter, festivals, food, and real stories! We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+    </div>
+    <div class="buttons">
+      <a href="https://youtube.com/@PasangaDiaries" class="youtube" target="_blank">Subscribe on YouTube</a>
+      <a href="https://facebook.com/yourpage" class="facebook" target="_blank">Follow on Facebook</a>
+    </div>
+  </div>  <div class="footer">
     Contact us: pasangadiaries@gmail.com
-    <div class="wave"></div>
-  </footer>
-
+  </div>
 </body>
 </html>
