--- a/index.html
+++ b/index.html
@@ -1,91 +1,102 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Pasanga Diaries</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 0;
       background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      overflow-x: hidden;
-    }
-    .container {
-      position: relative;
+      color: white;
+      font-family: Arial, sans-serif;
       text-align: center;
-      padding: 80px 20px 40px;
-      z-index: 2;
+      overflow: hidden;
     }
-    .title {
+
+    .logo {
+      margin-top: 20px;
+      width: 100px;
+      height: auto;
+    }
+
+    h1 {
       font-size: 2.5em;
-      margin-bottom: 20px;
+      margin: 0.5em 0;
     }
-    .description {
+
+    p {
       max-width: 600px;
-      margin: 0 auto 30px;
+      margin: 1em auto;
       font-size: 1.1em;
       line-height: 1.6;
     }
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 20px;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s;
+
+    .buttons {
+      margin: 20px;
     }
-    .buttons a.youtube {
+
+    .buttons a {
+      padding: 10px 20px;
+      margin: 10px;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      display: inline-block;
+    }
+
+    .youtube-btn {
       background-color: #ff0000;
     }
-    .buttons a.facebook {
+
+    .facebook-btn {
       background-color: #3b5998;
     }
-    .buttons a:hover {
-      opacity: 0.85;
-    }
-    .footer {
-      background-color: #111;
-      color: #ccc;
-      text-align: center;
+
+    .contact {
+      background: rgba(0, 0, 0, 0.3);
       padding: 15px;
-      position: relative;
-      z-index: 2;
-    }
-    .animated-character {
       position: absolute;
       bottom: 0;
-      width: 150px;
-      z-index: 1;
+      width: 100%;
     }
-    .left-character {
+
+    .animated-boy {
+      position: absolute;
+      bottom: 10px;
+      width: 120px;
+      height: auto;
+    }
+
+    .left-boy {
       left: 10px;
     }
-    .right-character {
+
+    .right-boy {
       right: 10px;
-    }
-    @media (max-width: 600px) {
-      .animated-character {
-        width: 100px;
-      }
+      transform: scaleX(-1); /* flip to face left */
     }
   </style>
 </head>
 <body>
-  <img src="https://media.giphy.com/media/l41lFw057lAJQMwg0/giphy.gif" class="animated-character left-character" alt="funny boy" />
-  <img src="https://media.giphy.com/media/xT0BKiaM2VGJpV2MLG/giphy.gif" class="animated-character right-character" alt="dancing boy" />  <div class="container">
-    <img src="https://i.imgur.com/FdZLkPl.png" alt="Pasanga Diaries Logo" width="100" />
-    <div class="title">Pasanga Diaries</div>
-    <div class="description">
-      Welcome to Pasanga Diaries — Our source for fun, laughter, festivals, food, and real stories! We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
-    </div>
-    <div class="buttons">
-      <a href="https://youtube.com/@PasangaDiaries" class="youtube" target="_blank">Subscribe on YouTube</a>
-      <a href="https://facebook.com/yourpage" class="facebook" target="_blank">Follow on Facebook</a>
-    </div>
-  </div>  <div class="footer">
+  <img src="logo.jpg" alt="Pasanga Diaries Logo" class="logo">
+
+  <h1>Pasanga Diaries</h1>
+  <p>
+    Welcome to Pasanga Diaries — Our source for fun, laughter, festivals, food, and real stories!<br>
+    We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+  </p>
+
+  <div class="buttons">
+    <a class="youtube-btn" href="https://www.youtube.com/@PasangaDiaries" target="_blank">Subscribe on YouTube</a>
+    <a class="facebook-btn" href="https://www.facebook.com/share/1ChFrzeBzM/" target="_blank">Follow on Facebook</a>
+  </div>
+
+  <img src="boy-walking.gif" class="animated-boy left-boy" alt="Walking Boy Left">
+  <img src="boy-walking.gif" class="animated-boy right-boy" alt="Walking Boy Right">
+
+  <div class="contact">
     Contact us: pasangadiaries@gmail.com
   </div>
 </body>
