--- a/index.html
+++ b/index.html
@@ -3,105 +3,135 @@
 <head>
   <meta charset="UTF-8">
   <title>Pasanga Diaries</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
+    html, body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
       color: white;
-      background: #0f2027;
       overflow: hidden;
-      position: relative;
     }
 
-    .wave-background {
-      position: absolute;
+    body::before {
+      content: '';
+      position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      z-index: -1;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      background: radial-gradient(circle at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(255,255,255,0.1), transparent 80%);
+      transition: background 0.1s;
+      z-index: 0;
     }
 
     .container {
+      position: relative;
       text-align: center;
-      padding: 80px 20px 60px;
+      padding: 100px 20px 60px;
+      z-index: 1;
     }
 
     .logo {
       width: 100px;
       margin-bottom: 20px;
-      animation: float 3s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
     }
 
     h1 {
       font-size: 3em;
-      background: linear-gradient(90deg, #00f2fe, #4facfe);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      margin: 0.2em 0;
+      text-shadow: 0 0 10px #00f0ff, 0 0 20px #00f0ff;
     }
 
     p {
-      max-width: 600px;
-      margin: 20px auto;
+      max-width: 700px;
+      margin: 0 auto 20px;
       font-size: 1.2em;
       line-height: 1.6;
+      color: #e0e0e0;
+    }
+
+    .buttons {
+      margin-top: 30px;
     }
 
     .buttons a {
-      padding: 12px 24px;
-      margin: 12px;
-      color: white;
+      padding: 12px 25px;
+      margin: 10px;
+      border-radius: 25px;
       text-decoration: none;
-      border-radius: 30px;
+      color: white;
       font-weight: bold;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
       display: inline-block;
-      transition: background 0.3s, transform 0.2s;
-    }
-
-    .youtube-btn {
-      background: #ff0000;
-    }
-
-    .facebook-btn {
-      background: #3b5998;
     }
 
     .buttons a:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+    }
+
+    .youtube-btn {
+      background-color: #ff0000;
+    }
+
+    .facebook-btn {
+      background-color: #3b5998;
     }
 
     .contact {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
       text-align: center;
-      font-size: 0.9em;
-      opacity: 0.7;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      padding: 10px;
+      font-size: 0.95em;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 2;
     }
 
-    .mouse-light {
+    .wave-container {
       position: absolute;
-      width: 80px;
-      height: 80px;
-      background: radial-gradient(circle, rgba(255,255,255,0.2) 0%, transparent 80%);
-      border-radius: 50%;
-      pointer-events: none;
-      mix-blend-mode: screen;
-      transition: transform 0.05s ease;
+      bottom: 0;
+      width: 100%;
+      z-index: 0;
+    }
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 150px;
     }
   </style>
 </head>
 <body>
-  <svg class="wave-background" viewBox="0 0 1440 320">
-    <path fill="#2c5364" fill-opacity="1" d="M0,64L30,85.3C60,107,120,149,180,170.7C240,192,300,192,360,170.7C420,149,480,107,540,106.7C600,107,660,149,720,186.7C780,224,840,256,900,256C960,256,1020,224,1080,186.7C1140,149,1200,107,1260,90.7C1320,75,1380,85,1410,90.7L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120
+
+  <div class="container">
+    <img src="logo.jpg" alt="Pasanga Diaries Logo" class="logo">
+
+    <h1>Pasanga Diaries</h1>
+    <p>
+      Welcome to Pasanga Diaries — Your source for fun, laughter, festivals, food, and real stories!<br>
+      We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+    </p>
+
+    <div class="buttons">
+      <a class="youtube-btn" href="https://www.youtube.com/@PasangaDiaries" target="_blank">Subscribe on YouTube</a>
+      <a class="facebook-btn" href="https://www.facebook.com/share/1ChFrzeBzM/" target="_blank">Follow on Facebook</a>
+    </div>
+  </div>
+
+  <div class="wave-container">
+    <svg viewBox="0 0 1440 320">
+      <path fill="#ffffff22" fill-opacity="1" d="M0,160L40,165.3C80,171,160,181,240,160C320,139,400,85,480,85.3C560,85,640,139,720,160C800,181,880,171,960,176C1040,181,1120,203,1200,192C1280,181,1360,139,1400,117.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+    </svg>
+  </div>
+
+  <div class="contact">
+    Contact us: pasangadiaries@gmail.com
+  </div>
+
+  <script>
+    // Mouse tracking light effect
+    document.addEventListener('mousemove',
