--- a/index.html
+++ b/index.html
@@ -11,37 +11,26 @@
       background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
       color: white;
       overflow: hidden;
-      position: relative;
-      height: 100vh;
     }
 
-    canvas#stars {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-    }
-
-    #light-overlay {
+    body::before {
+      content: '';
       position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
       height: 100vh;
       pointer-events: none;
-      background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.15), transparent 60%);
-      mix-blend-mode: screen;
-      z-index: 1;
-      transition: background-position 0.05s;
+      background: radial-gradient(circle at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(255,255,255,0.1), transparent 80%);
+      transition: background 0.1s;
+      z-index: 0;
     }
 
     .container {
       position: relative;
       text-align: center;
       padding: 100px 20px 60px;
-      z-index: 2;
+      z-index: 1;
     }
 
     .logo {
@@ -97,3 +86,60 @@
       bottom: 0;
       width: 100%;
       padding: 10px;
+      font-size: 0.95em;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 2;
+    }
+
+    .wave-container {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      z-index: 0;
+    }
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 150px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <img src="logo.jpg" alt="Pasanga Diaries Logo" class="logo">
+
+    <h1>Pasanga Diaries</h1>
+    <p>
+      Welcome to Pasanga Diaries — Your source for fun, laughter, festivals, food, and real stories!<br>
+      We're a vibrant crew capturing raw, interesting moments from local life in Tamil Nadu. Join our journey through city streets, temples, and tasty treats.
+    </p>
+
+    <div class="buttons">
+      <a class="youtube-btn" href="https://www.youtube.com/@PasangaDiaries" target="_blank">Subscribe on YouTube</a>
+      <a class="facebook-btn" href="https://www.facebook.com/share/1ChFrzeBzM/" target="_blank">Follow on Facebook</a>
+    </div>
+  </div>
+
+  <div class="wave-container">
+    <svg viewBox="0 0 1440 320">
+      <path fill="#ffffff22" fill-opacity="1" d="M0,160L40,165.3C80,171,160,181,240,160C320,139,400,85,480,85.3C560,85,640,139,720,160C800,181,880,171,960,176C1040,181,1120,203,1200,192C1280,181,1360,139,1400,117.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+    </svg>
+  </div>
+
+  <div class="contact">
+    Contact us: pasangadiaries@gmail.com
+  </div>
+
+  <script>
+    // Mouse tracking light effect
+    document.addEventListener('mousemove', (e) => {
+      const x = (e.clientX / window.innerWidth) * 100;
+      const y = (e.clientY / window.innerHeight) * 100;
+      document.body.style.setProperty('--mouse-x', `${x}%`);
+      document.body.style.setProperty('--mouse-y', `${y}%`);
+    });
+  </script>
+</body>
+</html>
